# rocketbackend

./: .dockerignore  .env.example  AGENTS.md  Cargo.toml  Dockerfile  QWEN.md  README.md  database.db
src/: auth.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  rate_limit.rs  response.rs
src/controllers/: mod.rs  tag.rs
src/dto/: auth.rs  bookmark.rs  comment.rs  common.rs  holding.rs  mod.rs  notification.rs  post.rs  report.rs  tag.rs  user.rs  validation.rs
src/entities/: bookmark_folders.rs  holding_types.rs  holdings.rs  mod.rs  notifications.rs  post_bookmarks.rs  post_comments.rs  post_likes.rs  post_views.rs  posts.rs  posts_to_tags.rs  profiles.rs  sessions.rs  tags.rs  user_follows.rs  users.rs
src/handlers/: auth.rs  bookmark.rs  comment.rs  health.rs  holding.rs  mod.rs  notification.rs  post.rs  report.rs  tag.rs  user.rs
src/models/: bookmark.rs  comment.rs  holding.rs  mod.rs  notification.rs  post.rs  post_like.rs  post_view.rs  report.rs  response.rs  tag.rs  user.rs  user_follow.rs
src/routes/: health.rs  mod.rs  post.rs
src/services/: auth.rs  bookmark.rs  comment.rs  holding.rs  mod.rs  notification.rs  post.rs  post_like.rs  post_view.rs  report.rs  tag.rs  user.rs  user_follow.rs  user_hydration.rs
