[package]
name = "axumbackend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15"
axum = "0.8.8"
axum-extra = { version = "0.9.6", features = ["typed-routing"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.16"
deadpool = { version = "0.12" }
deadpool-postgres = { version = "0.14", features = ["serde"] }
postgres-types = { version = "0.2.12", features = ["with-chrono-0_4", "with-uuid-1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
