[package]
name = "axumbackend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15"
axum = "0.8.8"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.51.1", features = ["full"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
rand = "0.8"
axum-valid = { version = "0.24", features = ["validator"] }
validator = { version = "0.20", features = ["derive"] }
regex = "1.11"
once_cell = "1.20"
